--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fedora",
-  "homepage": "https://Rajeshsingh127.github.io/Portfolio"
+  "homepage": "https://Rajeshsingh127.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
